--- a/html5-boilerplate-4.3.0/index.html
+++ b/html5-boilerplate-4.3.0/index.html
@@ -32,7 +32,7 @@
 
 		//psd = PSD.fromFile('test.psd');
 
-		psd = PSD.fromURL('./test.psd', function(psd) {
+		psd = PSD.fromFile('test.psd', function(psd) {
 		  return console.log('PSD loaded!');
 		});
 
