point of figuring out the parsing function

--- a/html5-boilerplate-4.3.0/index.html
+++ b/html5-boilerplate-4.3.0/index.html
@@ -32,7 +32,7 @@
 		jQuery(document).ready(function(){
 			var psd;
 			
-			psd = PSD.fromURL('/eddy/html5-boilerplate-4.3.0/rayban-template.psd', function(psd) {
+			psd = PSD.fromURL('/eddy/html5-boilerplate-4.3.0/bridge.psd', function(psd) {
 			    console.log('PSD loaded!');
 				console.log('psd',psd.file);
 				
